# dytopo-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs
crates/analyze/: Cargo.toml
crates/analyze/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/embed/: Cargo.toml
crates/embed/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/router/tests/: router_tests.rs
crates/viz/: Cargo.toml
crates/viz/src/: lib.rs
docs/: ARCHITECTURE.md  PLAN.md  PROTOCOL.md  RUN.md  ai_agent_instructions.md  design.md  prd.md  results.md  status.md
