[package]
name = "dytopo-embed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
parking_lot = "0.12"
dytopo-core = { path = "../core" }
